# openagenticwork

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  REPO_SETTINGS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agenticode-cli/: .gitignore  README.md  package-lock.json  package.json
agenticode-cli/src/: index.ts  version.ts
agenticode-cli/src/core/: hitl.ts  (+19 more)
sdk/: .npmrc  README.md  package-lock.json  package.json
sdk/src/: index.ts
services/agenticode-manager/: Dockerfile  Dockerfile.standard  README.md  package-lock.json  package.json
services/agenticwork-api/: .env.template  .gitignore  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
services/agenticwork-mcp-proxy/: .env.example  Dockerfile  README.md  requirements.txt
services/agenticwork-ui/: .eslintrc-custom-rules.js  .eslintrc.json  Dockerfile  docker-entrypoint.sh  index.html  nginx.conf.template  package-lock.json  package.json  playwright.config.deployed.ts  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
services/mcps/awp-admin-mcp/: .dockerignore  .env.example  .smbdeleteAAAdf0efdd  .smbdeleteAAAdf0efe7  .smbdeleteAAAe176238  CHANGES.txt  Dockerfile  README.md  pyproject.toml  requirements.txt  schema.prisma  server.py
services/mcps/awp-admin-mcp/src/admin_mcp_server/: .smbdeleteAAAdf0efee  __init__.py  audit_tools.py  server.py  user_tools.py
services/mcps/awp-agenticwork-cli-mcp/: pyproject.toml  server.py
services/mcps/awp-web-mcp/: .env.example  README.md  pyproject.toml  requirements.txt  server.py
(+758 files in other folders)
